--- a/placeOrderManage.html
+++ b/placeOrderManage.html
@@ -37,5 +37,89 @@
             </nav>
         </header>
     </section>
+    <section>
+        <div class="col-6 placeOrderForm">
+            <div class="titleOrder">
+                <h3>Place Your Orders</h3>
+            </div>
+            <form class="row g-3 ">
+                <div class="col-12 margin-bottom">
+                    <label for="inputOrderId" class="form-label">Order Id :</label>
+                    <input type="text" class="form-control" id="inputOrderId" placeholder="O001">
+                </div>
+
+                <div class="row">
+                    <div class="col-5 margin-bottom">
+                        <label for="inputCustomerId" class="form-label">Customer Id :</label>
+                        <input type="text" id="inputCustomerId" class="form-control" placeholder="customer id" aria-label="Customer city">
+                    </div>
+                    <div class="col-7 margin-bottom">
+                        <label for="inputCustomerName" class="form-label inputFieldMargin">Customer Name :</label>
+                        <input type="text" id="inputCustomerName" class="form-control inputFieldMargin" placeholder="customer name" aria-label="Customer Name">
+                    </div>
+                </div>
+
+                <div class="row">
+                    <div class="col-5 margin-bottom">
+                        <label for="inputCity" class="form-label ">City :</label>
+                        <input type="text" id="inputCity" class="form-control" placeholder="select city" aria-label="City">
+                    </div>
+                    <div class="col-7 margin-bottom">
+                        <label for="inputTelephone" class="form-label inputFieldMargin">Telephone :</label>
+                        <input type="text" id="inputTelephone" class="form-control inputFieldMargin" placeholder="telephone" aria-label="telephone">
+                    </div>
+                </div>
+
+                <div class="margin-bottom">
+                    <h4>Item Section</h4>
+                    <div id="line1"></div>
+                </div>
+
+                <div class="row">
+                    <div class="col-5 margin-bottom">
+                        <label for="inputItemCode" class="form-label">Item Code</label>
+                        <select id="inputItemCode" class="form-select">
+                            <option selected>I001</option>
+                            <option>...</option>
+                        </select>
+                    </div>
+                    <div class="col-7 margin-bottom">
+                        <label for="inputItemName" class="form-label inputFieldMargin">Item Name :</label>
+                        <input type="text" id="inputItemName" class="form-control inputFieldMargin" placeholder="item name" aria-label="item name">
+                    </div>
+                </div>
+
+                <div class="row">
+                    <div class="col-5 margin-bottom">
+                        <label for="qtyOnHand" class="form-label">QTY On Hand :</label>
+                        <input type="text" id="qtyOnHand" class="form-control" placeholder="QTY On Hand" aria-label="QTY On Hand">
+                    </div>
+                    <div class="col-7 margin-bottom">
+                        <label for="orderQTY" class="form-label inputFieldMargin">Order QTY :</label>
+                        <input type="text" id="orderQTY" class="form-control inputFieldMargin" placeholder="order qty" aria-label="orderQTY">
+                    </div>
+                </div>
+
+                <div class="col-md-12 marginZero">
+                    <label for="inputPrice" class="form-label">Price</label>
+                    <input type="text" class="form-control" id="inputPrice" placeholder="price">
+                </div>
+                <div class="col-12">
+                    <button id="placeOrderConfirmBtn" type="submit" class="btn btn-primary"> Confirm Order</button>
+                </div>
+                <div id="line2"></div>
+            </form>
+
+        <div class="col-6" id="bill">
+            <div class="titleBill titleOrder">
+                <h5>Billing Your Order</h5>
+            </div>
+
+            <div class="col-6">
+
+            </div>
+        </div>
+        </div>
+    </section>
 </body>
 </html>
