--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>Title</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="assets/stylesheet/dashboardCSSFile.css">
+    <link rel="stylesheet" href="assets/stylesheet/placeOrderCSSFile.css">
     <style>
 
     </style>
@@ -178,11 +179,98 @@
                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
                 <div class="modal-body">
+                    <!--  code here  -->
+                    <div class="col-12 placeOrderForm">
+                        <div class="updateTitleOrder">
+                            <h3 class="purpleTextColor">Update Your Orders</h3>
+                        </div>
+                        <form class="row g-3 ">
+                            <div class="col-12 margin-bottom">
+                                <label for="inputOrderId" class="form-label">Order Id :</label>
+<!--                                <input type="text" class="form-control" id="inputOrderId" placeholder="O001">-->
+                                <select id="inputOrderId" class="form-select">
+                                    <option selected>I001</option>
+                                    <option>...</option>
+                                </select>
+                            </div>
 
-                </div>
-                <div class="modal-footer">
-                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-                    <button type="button" class="btn btn-primary">Save changes</button>
+                            <div class="row">
+                                <div class="col-5 margin-bottom">
+                                    <label for="inputCustomerId" class="form-label">Customer Id :</label>
+                                    <input type="text" id="inputCustomerId" class="form-control" placeholder="customer id" aria-label="Customer city">
+                                </div>
+                                <div class="col-7 margin-bottom">
+                                    <label for="inputCustomerName" class="form-label inputFieldMargin">Customer Name :</label>
+                                    <input type="text" id="inputCustomerName" class="form-control inputFieldMargin" placeholder="customer name" aria-label="Customer Name">
+                                </div>
+                            </div>
+
+                            <div class="row">
+                                <div class="col-5 margin-bottom">
+                                    <label for="inputCity" class="form-label ">City :</label>
+                                    <input type="text" id="inputCity" class="form-control" placeholder="select city" aria-label="City">
+                                </div>
+                                <div class="col-7 margin-bottom">
+                                    <label for="inputTelephone" class="form-label inputFieldMargin">Telephone :</label>
+                                    <input type="text" id="inputTelephone" class="form-control inputFieldMargin" placeholder="telephone" aria-label="telephone">
+                                </div>
+                            </div>
+
+                            <div class="margin-bottom">
+                                <h4 class="purpleTextColor">Item Section</h4>
+                                <div id="line1UpdateOrder"></div>
+                            </div>
+
+                            <div class="row">
+                                <div class="col-5 margin-bottom">
+                                    <label for="inputItemCode" class="form-label">Item Code</label>
+                                    <select id="inputItemCode" class="form-select">
+                                        <option selected>I001</option>
+                                        <option>...</option>
+                                    </select>
+                                </div>
+                                <div class="col-7 margin-bottom">
+                                    <label for="inputItemName" class="form-label inputFieldMargin">Item Name :</label>
+                                    <input type="text" id="inputItemName" class="form-control inputFieldMargin" placeholder="item name" aria-label="item name">
+                                </div>
+                            </div>
+
+                            <div class="row">
+                                <div class="col-5 margin-bottom">
+                                    <label for="qtyOnHand" class="form-label">QTY On Hand :</label>
+                                    <input type="text" id="qtyOnHand" class="form-control" placeholder="QTY On Hand" aria-label="QTY On Hand">
+                                </div>
+                                <div class="col-7 margin-bottom">
+                                    <label for="orderQTY" class="form-label inputFieldMargin">Order QTY :</label>
+                                    <input type="text" id="orderQTY" class="form-control inputFieldMargin" placeholder="order qty" aria-label="orderQTY">
+                                </div>
+                            </div>
+
+                            <div class="col-md-12 marginZero">
+                                <label for="inputPrice" class="form-label">Price</label>
+                                <input type="text" class="form-control" id="inputPrice" placeholder="price">
+                            </div>
+
+                            <div class="subTotal col-4">
+                                <h6 class="">Sub Total</h6>
+                                <h5 class="">0.00</h5>
+                            </div>
+
+                            <div class="discount col-4">
+                                <h6 class="textAlignCenter">Discount</h6>
+                                <h5 class="textAlignCenter">0.00</h5>
+                            </div>
+
+                            <div class="balance col-4">
+                                <h6 class="textAlignRight">Balance</h6>
+                                <h5 class="textAlignRight">0.00</h5>
+                            </div>
+                        </form>
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                        <button type="button" class="btn btn-primary">Save changes</button>
+                    </div>
                 </div>
             </div>
         </div>
